--- a/solution-p/less/section_clients.less
+++ b/solution-p/less/section_clients.less
@@ -5,12 +5,13 @@
 
 .section_clients {
     background-color: @bg;
-    min-height: 680px;
+    min-height: 600px;
 }
 .section_clients .section__header {
     display: none;
 }
 .clients {
+    // max-width: 1000px;
     padding: 20px 0;
     margin: 0 auto;
     margin-top: 80px;
@@ -53,6 +54,7 @@
 .section_clients .img_white,
 .section_clients .img_color {
     width: 100%;
+    // max-width: 200px;
 }
 
 @media @mobile {
@@ -63,7 +65,6 @@
         .clients {
             max-width: 450px;
             margin-top: 20px;
-            margin-bottom: 20px;
             padding: 0;
         }
         .client {
