--- a/solution-p/less/style.less
+++ b/solution-p/less/style.less
@@ -36,8 +36,6 @@ h2 {
     margin: 0 auto;
     padding: 0 40px;
     text-align: center;
-    overflow: hidden;
-    // background-color: lightpink;
 }
 .section__header {
     padding-top: 30px;
@@ -46,8 +44,8 @@ h2 {
 }
 .section__desc {
     margin: 0 auto;
-    padding: 20px 3px 60px;
-    max-width: 610px;
+    padding: 20px 3px 40px;
+    max-width: 600px;
     .font_main;
 }
 .slide {
@@ -391,6 +389,13 @@ div.wpcf7 img.ajax-loader {
     .btns {
         display: inline-block;
         max-width: 360px;
+    }
+    .btn {
+        margin: 0;
+    }
+    .btn_blue,
+    .btn_white {
+        width: 100%;
     }
     .btn_prev,
     .btn_next {
